http-server/error.txt
In file included from main.c:1:
./http.h:742:2: error: use of undeclared identifier 'ctx'
        ctx = SSL_CTX_new(SSLv23_server_method());
        ^
./http.h:743:5: error: use of undeclared identifier 'ctx'
        if(ctx==NULL)
           ^
./http.h:883:8: warning: extra tokens at end of #endif directive [-Wextra-tokens]
#endif HTTP_SERVER_H__
       ^
       //
1 warning and 2 errors generated.
